# playwright-scrapers

./: .gitignore  README.md  college_searcher.py  colleges_config.yaml  config.yaml  planning.md  pyPackage.py  pyproject.toml  requirements.txt  scholarship_finder.py
WIP/job_seeker/: config.yaml  job_seeker.py
college_searcher/: college_searcher.py  colleges_config.yaml
job_seeker/: job_seeker.py
scholarship_finder/: config.yaml  scholarship_finder.py
tutorials/: config.yaml  screenshotter.py  sitemapScanner.py
work_in_progress/sitemap_scanner/: sitemap_scanner.py
