[tool.poetry]
name = "playwright_scrapers_aszm101"
version = "0.0.1"
description = ""
authors = [{name="Adriana Zambrano", email="adrianasofia.zambrano@gmail.com"}]
description = "Web scraping programs"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.1"
requests = "^2.31"
lxml = "^5.1"
beautifulsoup4 = "^4.12"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"